--- a/Navalha-ui/package.json
+++ b/Navalha-ui/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@angular/youtube-player": "^19.2.9",
+    "@types/youtube": "^0.1.0",
     "bootstrap": "^5.3.3",
     "ngx-mask": "^19.0.6",
     "rxjs": "~7.8.0",
@@ -29,7 +31,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.1",
-    "@angular/cli": "^19.2.6",
+    "@angular/cli": "^19.2.7",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
